Effettuata pulizia codice e warning